@startuml

title __ADAPTERS's Class Diagram__\n

  namespace com.example.androidximalayafm {
    namespace adapters {
      class com.example.androidximalayafm.adapters.DetailListAdapter {
          - durationFormat : SimpleDateFormat
          - mDetailData : List<Track>
          - mSimpleDateFormat : SimpleDateFormat
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          + setData()
          + setItemClickListener()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace adapters {
      class com.example.androidximalayafm.adapters.DetailListAdapter.InnerHolder {
          + InnerHolder()
          + setData()
          - accept()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace adapters {
      interface com.example.androidximalayafm.adapters.DetailListAdapter.ItemClickListener {
          {abstract} + onItemClick()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace adapters {
      class com.example.androidximalayafm.adapters.IndicatorAdapter {
          - mTitles : String[]
          + IndicatorAdapter()
          + getCount()
          + getIndicator()
          + getTitleView()
          + setOnIndicatorTapClickListener()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace adapters {
      interface com.example.androidximalayafm.adapters.IndicatorAdapter.OnIndicatorTapClickListener {
          {abstract} + onTabClick()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace adapters {
      class com.example.androidximalayafm.adapters.MainContentAdapter {
          + MainContentAdapter()
          + MainContentAdapter()
          + getCount()
          + getItem()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace adapters {
      class com.example.androidximalayafm.adapters.RecommendListAdapter {
          {static} - TAG : String
          - albumList : List<Album>
          - mView : View
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          + setData()
          + setOnRecommendItemClickListener()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace adapters {
      class com.example.androidximalayafm.adapters.RecommendListAdapter.InnerHolder {
          + InnerHolder()
          + setData()
      }
    }
  }
  

  namespace com.example.androidximalayafm {
    namespace adapters {
      interface com.example.androidximalayafm.adapters.RecommendListAdapter.OnRecommendItemClickListener {
          {abstract} + onItemClick()
      }
    }
  }
  

  com.example.androidximalayafm.adapters.DetailListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.androidximalayafm.adapters.DetailListAdapter o-- com.example.androidximalayafm.adapters.DetailListAdapter.ItemClickListener : itemClickListener
  com.example.androidximalayafm.adapters.DetailListAdapter +-down- com.example.androidximalayafm.adapters.DetailListAdapter.InnerHolder
  com.example.androidximalayafm.adapters.DetailListAdapter +-down- com.example.androidximalayafm.adapters.DetailListAdapter.ItemClickListener
  com.example.androidximalayafm.adapters.DetailListAdapter.InnerHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.androidximalayafm.adapters.IndicatorAdapter -up-|> net.lucode.hackware.magicindicator.buildins.commonnavigator.abs.CommonNavigatorAdapter
  com.example.androidximalayafm.adapters.IndicatorAdapter o-- com.example.androidximalayafm.adapters.IndicatorAdapter.OnIndicatorTapClickListener : mOnTapClickListener
  com.example.androidximalayafm.adapters.IndicatorAdapter +-down- com.example.androidximalayafm.adapters.IndicatorAdapter.OnIndicatorTapClickListener
  com.example.androidximalayafm.adapters.MainContentAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter
  com.example.androidximalayafm.adapters.RecommendListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.androidximalayafm.adapters.RecommendListAdapter o-- com.example.androidximalayafm.adapters.RecommendListAdapter.OnRecommendItemClickListener : mItemClickListener
  com.example.androidximalayafm.adapters.RecommendListAdapter +-down- com.example.androidximalayafm.adapters.RecommendListAdapter.InnerHolder
  com.example.androidximalayafm.adapters.RecommendListAdapter +-down- com.example.androidximalayafm.adapters.RecommendListAdapter.OnRecommendItemClickListener
  com.example.androidximalayafm.adapters.RecommendListAdapter.InnerHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
